; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_shash.c_shash_async_setkey.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_shash.c_shash_async_setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_ahash = type { i32 }
%struct.crypto_shash = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_ahash*, i32*, i32)* @shash_async_setkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @shash_async_setkey(%struct.crypto_ahash* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.crypto_ahash*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.crypto_shash**, align 8
  store %struct.crypto_ahash* %0, %struct.crypto_ahash** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.crypto_ahash*, %struct.crypto_ahash** %4, align 8
  %9 = call %struct.crypto_shash** @crypto_ahash_ctx(%struct.crypto_ahash* %8)
  store %struct.crypto_shash** %9, %struct.crypto_shash*** %7, align 8
  %10 = load %struct.crypto_shash**, %struct.crypto_shash*** %7, align 8
  %11 = load %struct.crypto_shash*, %struct.crypto_shash** %10, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @crypto_shash_setkey(%struct.crypto_shash* %11, i32* %12, i32 %13)
  ret i32 %14
}

declare dso_local %struct.crypto_shash** @crypto_ahash_ctx(%struct.crypto_ahash*) #1

declare dso_local i32 @crypto_shash_setkey(%struct.crypto_shash*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
